--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d5dab0; }
+  background: #d23bd8; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ed17c8; }
+  background: #c22818; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b9d01d; }
+  background: #397ca3; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a696b0; }
+  background: #66646a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #6f542b; }
+  background: #57eef9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #33462a; }
+  background: #d9fd6c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #e552cf; }
+  background: #963d1e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #2331d9; }
+  background: #6235f9; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #707d16; }
+  background: #822967; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #fdaa69; }
+  background: #e9d5cb; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ac4f2c; }
+  background: #e79509; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #518e83; }
+  background: #1f5bd8; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #468cf6; }
+  background: #7ff908; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #5e1c6e; }
+  background: #1c2118; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1c7247; }
+  background: #ea6fbd; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #79f212; }
+  background: #6dc267; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #347637; }
+  background: #0940dc; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #fc0647; }
+  background: #cb20c7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #5e6c55; }
+  background: #722292; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b5eecd; }
+  background: #d26154; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #3bfee2; }
+  background: #3c356b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #4b48fa; }
+  background: #6d1056; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #160207; }
+  background: #923525; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #584241; }
+  background: #a94518; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #6d435e; }
+  background: #7dbbf9; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f14262; }
+  background: #0ec7b6; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #37ec0e; }
+  background: #587642; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b302ac; }
+  background: #63a969; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d216f3; }
+  background: #91546b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #653fef; }
+  background: #49e9fa; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7c8ae3; }
+  background: #ad4ac7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #11bc3e; }
+  background: #29e113; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #9e76b7; }
+  background: #b76111; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #87c2f6; }
+  background: #4134be; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #5001ff; }
+  background: #fc6652; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2fa7f3; }
+  background: #74d56f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #fabee1; }
+  background: #2676f8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #6c8b82; }
+  background: #37f7a3; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #26227a; }
+  background: #7a67f1; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #6dc71a; }
+  background: #5863bc; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #713839; }
+  background: #0af4a7; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #380bd7; }
+  background: #9d2c11; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #2424c8; }
+  background: #59cfcf; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #66ff04; }
+  background: #1edd2d; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9f2797; }
+  background: #42b3e5; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #61f851; }
+  background: #ea9bf2; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #5a2862; }
+  background: #ba0efe; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f08004; }
+  background: #2d6563; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2ee4e0; }
+  background: #588cda; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #ee643d; }
+  background: #6f6a4c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e97c54; }
+  background: #26d446; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #f602a6; }
+  background: #96fdb6; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #a85973; }
+  background: #f7fc33; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7f5034; }
+  background: #296dcc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #0fb878; }
+  background: #4f119f; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #135bbc; }
+  background: #331c9c; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ded48f; }
+  background: #9ee7b7; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e118d8; }
+  background: #5d2ee5; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #164382; }
+  background: #33c65e; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f0614b; }
+  background: #5a5a7e; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #0bcc6e; }
+  background: #9329f1; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a5f3b3; }
+  background: #64e420; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #9a2794; }
+  background: #7ad85e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #2663f8; }
+  background: #f5629a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #aa9efe; }
+  background: #6c56af; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #8d6a14; }
+  background: #804fe1; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #54f59e; }
+  background: #a92f08; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8bd295; }
+  background: #bca485; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a404a1; }
+  background: #cfa00e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8cc932; }
+  background: #da58bb; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #76aef0; }
+  background: #1fa759; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #3b43ea; }
+  background: #7569d1; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #aee521; }
+  background: #8804fd; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #feb79e; }
+  background: #163d01; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8cf7b5; }
+  background: #fcba12; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #0a971e; }
+  background: #fb671e; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #795116; }
+  background: #a760c6; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1c5f34; }
+  background: #f5a654; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1f175c; }
+  background: #16908c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #44a28b; }
+  background: #1c2be8; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #23bb6d; }
+  background: #7b54eb; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #658474; }
+  background: #03e520; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b768b2; }
+  background: #eb620c; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #f4bc99; }
+  background: #7af91a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #085657; }
+  background: #0aeaba; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #89e38d; }
+  background: #7c1386; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e9c488; }
+  background: #acfd57; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5cdc16; }
+  background: #0b8c23; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e795d7; }
+  background: #fa02fa; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #b2d9de; }
+  background: #af3f17; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #58685a; }
+  background: #bb38c6; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #da48c5; }
+  background: #8cee57; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #f2d193; }
+  background: #627da6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #a6ce51; }
+  background: #3a3437; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #704463; }
+  background: #0a367e; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #55e409; }
+  background: #9002a2; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #bd22d0; }
+  background: #2067b2; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #0212c3; }
+  background: #a9d4b7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #d38b65; }
+  background: #5f1e74; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #647dcc; }
+  background: #cd22bf; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11616,7 +11616,7 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
       color: #000000;
       text-decoration: none;
-      font-size: 12px; }
+      font-size: 14px; }
       .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a span {
         background: #776fff;
         border-radius: 50%;
@@ -11676,7 +11676,7 @@ input:checked + .sliders:before {
   font-size: 12px; }
 
 .rule-btn {
-  margin-right: 8px; }
+  margin-right: 4px; }
 
 .togleBtn {
   background: #776fff;
@@ -11960,7 +11960,7 @@ input:checked + .sliderss .on {
   display: block;
   font-size: 14px;
   padding-left: 10px;
-  left: 30%; }
+  left: 26%; }
 
 input:checked + .sliderss .off {
   display: none; }
