--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d23bd8; }
+  background: #6cfa4c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c22818; }
+  background: #ce5869; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #397ca3; }
+  background: #288369; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #66646a; }
+  background: #17e767; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #57eef9; }
+  background: #7573b3; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #d9fd6c; }
+  background: #7df811; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #963d1e; }
+  background: #ba8840; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6235f9; }
+  background: #55598d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #822967; }
+  background: #cb85cf; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #e9d5cb; }
+  background: #1ad913; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #e79509; }
+  background: #4d21d8; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #1f5bd8; }
+  background: #baa6e1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7ff908; }
+  background: #1db3a5; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #1c2118; }
+  background: #e07207; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #ea6fbd; }
+  background: #cf1057; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6dc267; }
+  background: #ad0552; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #0940dc; }
+  background: #f4e2fe; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #cb20c7; }
+  background: #75344d; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #722292; }
+  background: #385fe1; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d26154; }
+  background: #194cef; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #3c356b; }
+  background: #681578; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6d1056; }
+  background: #96a107; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #923525; }
+  background: #288096; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a94518; }
+  background: #033ad7; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #7dbbf9; }
+  background: #b3fdc1; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #0ec7b6; }
+  background: #aa8b47; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #587642; }
+  background: #891bbc; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #63a969; }
+  background: #ddaa70; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #91546b; }
+  background: #e415ae; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #49e9fa; }
+  background: #5084f1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #ad4ac7; }
+  background: #aa71ae; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #29e113; }
+  background: #1ea0f9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b76111; }
+  background: #d9f8f2; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #4134be; }
+  background: #9ad681; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #fc6652; }
+  background: #2f1c01; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #74d56f; }
+  background: #8d598f; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2676f8; }
+  background: #906ea6; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #37f7a3; }
+  background: #6a8c60; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #7a67f1; }
+  background: #fb7e40; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5863bc; }
+  background: #1da8d3; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #0af4a7; }
+  background: #e65748; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #9d2c11; }
+  background: #6c696a; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #59cfcf; }
+  background: #c87d3c; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #1edd2d; }
+  background: #01d1bd; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #42b3e5; }
+  background: #016ba9; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #ea9bf2; }
+  background: #c7404a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #ba0efe; }
+  background: #bf6415; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #2d6563; }
+  background: #037372; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #588cda; }
+  background: #f92ad8; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6f6a4c; }
+  background: #8dbdcc; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #26d446; }
+  background: #77d0a7; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #96fdb6; }
+  background: #235b13; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f7fc33; }
+  background: #99d6bc; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #296dcc; }
+  background: #0f21cf; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4f119f; }
+  background: #6d9fec; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #331c9c; }
+  background: #e7e3a4; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #9ee7b7; }
+  background: #de8d6b; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #5d2ee5; }
+  background: #76af61; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #33c65e; }
+  background: #2f483c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #5a5a7e; }
+  background: #842996; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #9329f1; }
+  background: #4022ef; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #64e420; }
+  background: #162f3d; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #7ad85e; }
+  background: #c263ae; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f5629a; }
+  background: #2f3619; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #6c56af; }
+  background: #8bbcb8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #804fe1; }
+  background: #0e87d9; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a92f08; }
+  background: #6c9b7c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #bca485; }
+  background: #8e2b79; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #cfa00e; }
+  background: #1d4057; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #da58bb; }
+  background: #4009c8; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #1fa759; }
+  background: #d23df5; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7569d1; }
+  background: #e2d3f4; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #8804fd; }
+  background: #249955; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #163d01; }
+  background: #ac9a1a; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #fcba12; }
+  background: #936936; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #fb671e; }
+  background: #eed8ff; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a760c6; }
+  background: #51d371; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f5a654; }
+  background: #d5f4dc; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #16908c; }
+  background: #26ae14; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1c2be8; }
+  background: #80c106; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7b54eb; }
+  background: #124876; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #03e520; }
+  background: #2eb138; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #eb620c; }
+  background: #428c8e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7af91a; }
+  background: #3336cd; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #0aeaba; }
+  background: #b29586; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #7c1386; }
+  background: #de595a; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #acfd57; }
+  background: #099c3d; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0b8c23; }
+  background: #48dc10; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #fa02fa; }
+  background: #ce3ed6; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #af3f17; }
+  background: #e13396; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #bb38c6; }
+  background: #587b52; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #8cee57; }
+  background: #879e54; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #627da6; }
+  background: #a6fa53; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3a3437; }
+  background: #712ecc; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0a367e; }
+  background: #97be65; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9002a2; }
+  background: #438980; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2067b2; }
+  background: #75acfa; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #a9d4b7; }
+  background: #fed21c; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #5f1e74; }
+  background: #782ea8; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cd22bf; }
+  background: #683a83; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11740,6 +11740,18 @@ input:checked + .sliders:before {
   left: -25px;
   width: 4em;
   height: 0.15em; }
+
+.horizontal select {
+  height: 33px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  /* Remove default arrow */
+  background-image: url(../images/select-dropdwon-icon.png);
+  background-repeat: no-repeat;
+  background-position-x: 97%;
+  background-position-y: 13px;
+  /* Add custom arrow */ }
 
 .list-ic {
   display: flex;
