new changes model

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #6cfa4c; }
+  background: #1cdb6c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ce5869; }
+  background: #adfa9a; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #288369; }
+  background: #152128; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #17e767; }
+  background: #8860ce; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #7573b3; }
+  background: #393b85; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7df811; }
+  background: #ccf314; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #ba8840; }
+  background: #4d4699; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #55598d; }
+  background: #62caca; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #cb85cf; }
+  background: #e46955; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1ad913; }
+  background: #e132d4; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #4d21d8; }
+  background: #b2d7c4; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #baa6e1; }
+  background: #e6a3fb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #1db3a5; }
+  background: #d816fe; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #e07207; }
+  background: #d07cd7; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #cf1057; }
+  background: #4da906; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ad0552; }
+  background: #0fe3bc; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #f4e2fe; }
+  background: #13ac48; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #75344d; }
+  background: #79e141; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #385fe1; }
+  background: #5e603e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #194cef; }
+  background: #fe3b34; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #681578; }
+  background: #ed037a; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #96a107; }
+  background: #93bdf6; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #288096; }
+  background: #3b4f1c; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #033ad7; }
+  background: #bcd346; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #b3fdc1; }
+  background: #cfde9c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #aa8b47; }
+  background: #6d338b; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #891bbc; }
+  background: #e95124; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #ddaa70; }
+  background: #a5cbc4; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e415ae; }
+  background: #84631f; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5084f1; }
+  background: #21b93e; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #aa71ae; }
+  background: #0c91e2; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #1ea0f9; }
+  background: #03c726; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d9f8f2; }
+  background: #fe9842; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #9ad681; }
+  background: #46ee9c; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #2f1c01; }
+  background: #0ec6f0; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #8d598f; }
+  background: #ea8ddd; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #906ea6; }
+  background: #83c3e2; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #6a8c60; }
+  background: #4825b1; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #fb7e40; }
+  background: #dd38ae; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #1da8d3; }
+  background: #523056; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #e65748; }
+  background: #2192ae; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6c696a; }
+  background: #9f76e9; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #c87d3c; }
+  background: #177760; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #01d1bd; }
+  background: #801d6a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #016ba9; }
+  background: #e599d1; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #c7404a; }
+  background: #eea643; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #bf6415; }
+  background: #cf857d; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #037372; }
+  background: #84e0b2; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #f92ad8; }
+  background: #c63b2b; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #8dbdcc; }
+  background: #2643a7; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #77d0a7; }
+  background: #d84350; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #235b13; }
+  background: #1a08aa; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #99d6bc; }
+  background: #aa4361; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #0f21cf; }
+  background: #b4614d; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #6d9fec; }
+  background: #d03a42; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e7e3a4; }
+  background: #07c51b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #de8d6b; }
+  background: #4c810e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #76af61; }
+  background: #f90612; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #2f483c; }
+  background: #507033; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #842996; }
+  background: #9e5120; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #4022ef; }
+  background: #ef3597; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #162f3d; }
+  background: #8b1d4e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #c263ae; }
+  background: #ad0487; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #2f3619; }
+  background: #0750ee; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #8bbcb8; }
+  background: #e56b0b; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #0e87d9; }
+  background: #032a2d; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6c9b7c; }
+  background: #955a8b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8e2b79; }
+  background: #c072c4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #1d4057; }
+  background: #3f3629; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4009c8; }
+  background: #136ce7; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d23df5; }
+  background: #554c75; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e2d3f4; }
+  background: #420fd2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #249955; }
+  background: #1e29d9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ac9a1a; }
+  background: #cf86d5; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #936936; }
+  background: #3e497c; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #eed8ff; }
+  background: #4c6a41; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #51d371; }
+  background: #ae1248; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d5f4dc; }
+  background: #660c6d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #26ae14; }
+  background: #14b03f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #80c106; }
+  background: #5bc3e2; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #124876; }
+  background: #99104d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #2eb138; }
+  background: #879914; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #428c8e; }
+  background: #4788ec; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #3336cd; }
+  background: #685190; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b29586; }
+  background: #717f57; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #de595a; }
+  background: #71479e; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #099c3d; }
+  background: #41f927; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #48dc10; }
+  background: #36c675; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ce3ed6; }
+  background: #953535; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e13396; }
+  background: #db0514; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #587b52; }
+  background: #7c3ba5; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #879e54; }
+  background: #05107a; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a6fa53; }
+  background: #5a5cb0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #712ecc; }
+  background: #816c85; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #97be65; }
+  background: #ec34c1; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #438980; }
+  background: #e7e1a6; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #75acfa; }
+  background: #f2a588; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #fed21c; }
+  background: #d8099c; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #782ea8; }
+  background: #1644d2; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #683a83; }
+  background: #2975dd; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11608,10 +11608,10 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn::after {
       content: "";
       width: 0;
-      height: 45px;
+      height: 52px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -52px;
+      top: -57px;
       left: 38px; }
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
       color: #000000;
@@ -11647,10 +11647,10 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter::after {
       content: "";
       width: 0;
-      height: 43px;
+      height: 50px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -28px;
+      top: -33px;
       left: 41px; }
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter div {
       z-index: 2; }
@@ -11763,8 +11763,7 @@ input:checked + .sliders:before {
   text-decoration: none; }
 
 .list-ic li {
-  position: relative;
-  line-height: 11px; }
+  position: relative; }
 
 .list-ic li span {
   position: relative; }
